# employee-fastapi

./: Dockerfile  README.md  crud.py  database.db  fill_db.py  main.py  models.py  pyproject.toml  schemas.py  settings.py
tests/: conftest.py  test_me.py  test_own_promotion.py  test_own_salary.py  test_token.py
